# Serialization

./: CMakeLists.txt  README.md  Serializacja.docx  specyfikacja.txt
Serialization/: Serialization.opensdf  Serialization.sdf  Serialization.sln
Serialization/Debug/: Serialization.ilk
Serialization/Serialization/: Serialization.vcxproj  Serialization.vcxproj.filters
Serialization/Serialization/Debug/: vc120.idb
Serialization/Serialization/Debug/Serialization.tlog/: CL.read.1.tlog  CL.write.1.tlog  Serialization.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Serialization/Serialization/src/: main.c
Serialization/Serialization/src/file/: FileReader.c  FileReader.h
Serialization/Serialization/src/serializer/: SerializationReader.c  SerializationReader.h  SerializationWriter.c  SerializationWriter.h
Serialization/Serialization/src/type/: Type.h
